Fix overflow issue

--- a/Valour/Client/Components/Messages/MessageComponent.razor.css
+++ b/Valour/Client/Components/Messages/MessageComponent.razor.css
@@ -272,8 +272,8 @@
 }
 
 .attachment-wrapper {
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 410px;
+    max-height: 410px;
     overflow: auto;
 }
 
